--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -18,11 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,10 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "s = pd.Series(lst)\n",
     "# your code here"
    ]
   },
@@ -61,10 +64,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "74.4"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "s[2]\n",
     "# your code here"
    ]
   },
@@ -77,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,11 +108,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n      <th>3</th>\n      <th>4</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>53.1</td>\n      <td>95.0</td>\n      <td>67.5</td>\n      <td>35.0</td>\n      <td>78.4</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>61.3</td>\n      <td>40.8</td>\n      <td>30.8</td>\n      <td>37.8</td>\n      <td>87.6</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>20.6</td>\n      <td>73.2</td>\n      <td>44.2</td>\n      <td>14.6</td>\n      <td>91.8</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>57.4</td>\n      <td>0.1</td>\n      <td>96.1</td>\n      <td>4.2</td>\n      <td>69.5</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>83.6</td>\n      <td>20.5</td>\n      <td>85.4</td>\n      <td>22.8</td>\n      <td>35.9</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>49.0</td>\n      <td>69.0</td>\n      <td>0.1</td>\n      <td>31.8</td>\n      <td>89.1</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>23.3</td>\n      <td>40.7</td>\n      <td>95.0</td>\n      <td>83.8</td>\n      <td>26.9</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>27.6</td>\n      <td>26.4</td>\n      <td>53.8</td>\n      <td>88.8</td>\n      <td>68.5</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>96.6</td>\n      <td>96.4</td>\n      <td>53.4</td>\n      <td>72.4</td>\n      <td>50.1</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>73.7</td>\n      <td>39.0</td>\n      <td>43.2</td>\n      <td>81.6</td>\n      <td>34.7</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "      0     1     2     3     4\n0  53.1  95.0  67.5  35.0  78.4\n1  61.3  40.8  30.8  37.8  87.6\n2  20.6  73.2  44.2  14.6  91.8\n3  57.4   0.1  96.1   4.2  69.5\n4  83.6  20.5  85.4  22.8  35.9\n5  49.0  69.0   0.1  31.8  89.1\n6  23.3  40.7  95.0  83.8  26.9\n7  27.6  26.4  53.8  88.8  68.5\n8  96.6  96.4  53.4  72.4  50.1\n9  73.7  39.0  43.2  81.6  34.7"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "ddd=pd.DataFrame(b)\n",
+    "ddd"
    ]
   },
   {
@@ -111,20 +136,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "colnames = ['Score_1', 'Score_2', 'Score_3', 'Score_4', 'Score_5']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Score_1</th>\n      <th>Score_2</th>\n      <th>Score_3</th>\n      <th>Score_4</th>\n      <th>Score_5</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>53.1</td>\n      <td>95.0</td>\n      <td>67.5</td>\n      <td>35.0</td>\n      <td>78.4</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>61.3</td>\n      <td>40.8</td>\n      <td>30.8</td>\n      <td>37.8</td>\n      <td>87.6</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>20.6</td>\n      <td>73.2</td>\n      <td>44.2</td>\n      <td>14.6</td>\n      <td>91.8</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>57.4</td>\n      <td>0.1</td>\n      <td>96.1</td>\n      <td>4.2</td>\n      <td>69.5</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>83.6</td>\n      <td>20.5</td>\n      <td>85.4</td>\n      <td>22.8</td>\n      <td>35.9</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>49.0</td>\n      <td>69.0</td>\n      <td>0.1</td>\n      <td>31.8</td>\n      <td>89.1</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>23.3</td>\n      <td>40.7</td>\n      <td>95.0</td>\n      <td>83.8</td>\n      <td>26.9</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>27.6</td>\n      <td>26.4</td>\n      <td>53.8</td>\n      <td>88.8</td>\n      <td>68.5</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>96.6</td>\n      <td>96.4</td>\n      <td>53.4</td>\n      <td>72.4</td>\n      <td>50.1</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>73.7</td>\n      <td>39.0</td>\n      <td>43.2</td>\n      <td>81.6</td>\n      <td>34.7</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "   Score_1  Score_2  Score_3  Score_4  Score_5\n0     53.1     95.0     67.5     35.0     78.4\n1     61.3     40.8     30.8     37.8     87.6\n2     20.6     73.2     44.2     14.6     91.8\n3     57.4      0.1     96.1      4.2     69.5\n4     83.6     20.5     85.4     22.8     35.9\n5     49.0     69.0      0.1     31.8     89.1\n6     23.3     40.7     95.0     83.8     26.9\n7     27.6     26.4     53.8     88.8     68.5\n8     96.6     96.4     53.4     72.4     50.1\n9     73.7     39.0     43.2     81.6     34.7"
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "ddd.columns=colnames\n",
+    "ddd"
    ]
   },
   {
@@ -136,11 +174,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Score_1</th>\n      <th>Score_3</th>\n      <th>Score_5</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>53.1</td>\n      <td>67.5</td>\n      <td>78.4</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>61.3</td>\n      <td>30.8</td>\n      <td>87.6</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>20.6</td>\n      <td>44.2</td>\n      <td>91.8</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>57.4</td>\n      <td>96.1</td>\n      <td>69.5</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>83.6</td>\n      <td>85.4</td>\n      <td>35.9</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>49.0</td>\n      <td>0.1</td>\n      <td>89.1</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>23.3</td>\n      <td>95.0</td>\n      <td>26.9</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>27.6</td>\n      <td>53.8</td>\n      <td>68.5</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>96.6</td>\n      <td>53.4</td>\n      <td>50.1</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>73.7</td>\n      <td>43.2</td>\n      <td>34.7</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "   Score_1  Score_3  Score_5\n0     53.1     67.5     78.4\n1     61.3     30.8     87.6\n2     20.6     44.2     91.8\n3     57.4     96.1     69.5\n4     83.6     85.4     35.9\n5     49.0      0.1     89.1\n6     23.3     95.0     26.9\n7     27.6     53.8     68.5\n8     96.6     53.4     50.1\n9     73.7     43.2     34.7"
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "\n",
+    "score1=ddd['Score_1']\n",
+    "score3=ddd['Score_3']\n",
+    "score5=ddd['Score_5']\n",
+    "ss=pd.DataFrame({'score_1':score1,'score_2':score3,'score_3':score5})\n",
+    "# your code here\n",
+    "ss2 = pd.concat([score1,score3,score5], axis=1)\n",
+    "ss2"
    ]
   },
   {
@@ -152,11 +207,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "56.95000000000001"
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "ddd['Score_3'].mean()\n"
    ]
   },
   {
@@ -168,10 +233,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "88.8"
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "ddd['Score_4'].max()\n",
     "# your code here"
    ]
   },
@@ -184,10 +259,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "40.75"
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "ddd['Score_2'].median()\n",
     "# your code here"
    ]
   },
@@ -200,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,11 +306,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Description</th>\n      <th>Quantity</th>\n      <th>UnitPrice</th>\n      <th>Revenue</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>LUNCH BAG APPLE DESIGN</td>\n      <td>1</td>\n      <td>1.65</td>\n      <td>1.65</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>SET OF 60 VINTAGE LEAF CAKE CASES</td>\n      <td>24</td>\n      <td>0.55</td>\n      <td>13.20</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>RIBBON REEL STRIPES DESIGN</td>\n      <td>1</td>\n      <td>1.65</td>\n      <td>1.65</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>WORLD WAR 2 GLIDERS ASSTD DESIGNS</td>\n      <td>2880</td>\n      <td>0.18</td>\n      <td>518.40</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>PLAYING CARDS JUBILEE UNION JACK</td>\n      <td>2</td>\n      <td>1.25</td>\n      <td>2.50</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>POPCORN HOLDER</td>\n      <td>7</td>\n      <td>0.85</td>\n      <td>5.95</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>BOX OF VINTAGE ALPHABET BLOCKS</td>\n      <td>1</td>\n      <td>11.95</td>\n      <td>11.95</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>PARTY BUNTING</td>\n      <td>4</td>\n      <td>4.95</td>\n      <td>19.80</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>JAZZ HEARTS ADDRESS BOOK</td>\n      <td>10</td>\n      <td>0.19</td>\n      <td>1.90</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>SET OF 4 SANTA PLACE SETTINGS</td>\n      <td>48</td>\n      <td>1.25</td>\n      <td>60.00</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "                          Description  Quantity  UnitPrice  Revenue\n0              LUNCH BAG APPLE DESIGN         1       1.65     1.65\n1  SET OF 60 VINTAGE LEAF CAKE CASES         24       0.55    13.20\n2         RIBBON REEL STRIPES DESIGN          1       1.65     1.65\n3   WORLD WAR 2 GLIDERS ASSTD DESIGNS      2880       0.18   518.40\n4    PLAYING CARDS JUBILEE UNION JACK         2       1.25     2.50\n5                      POPCORN HOLDER         7       0.85     5.95\n6      BOX OF VINTAGE ALPHABET BLOCKS         1      11.95    11.95\n7                       PARTY BUNTING         4       4.95    19.80\n8            JAZZ HEARTS ADDRESS BOOK        10       0.19     1.90\n9       SET OF 4 SANTA PLACE SETTINGS        48       1.25    60.00"
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "order=pd.DataFrame(orders)\n",
+    "# your code here\n",
+    "order"
    ]
   },
   {
@@ -237,10 +334,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
+    "QuantSum=order['Quantity'].sum()\n",
+    "RevenueSum=order['Revenue'].sum()\n",
     "# your code here"
    ]
   },
@@ -253,12 +352,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Description</th>\n      <th>Quantity</th>\n      <th>UnitPrice</th>\n      <th>Revenue</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>3</th>\n      <td>WORLD WAR 2 GLIDERS ASSTD DESIGNS</td>\n      <td>2880</td>\n      <td>0.18</td>\n      <td>518.40</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>JAZZ HEARTS ADDRESS BOOK</td>\n      <td>10</td>\n      <td>0.19</td>\n      <td>1.90</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>SET OF 60 VINTAGE LEAF CAKE CASES</td>\n      <td>24</td>\n      <td>0.55</td>\n      <td>13.20</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>POPCORN HOLDER</td>\n      <td>7</td>\n      <td>0.85</td>\n      <td>5.95</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>PLAYING CARDS JUBILEE UNION JACK</td>\n      <td>2</td>\n      <td>1.25</td>\n      <td>2.50</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "                          Description  Quantity  UnitPrice  Revenue\n3   WORLD WAR 2 GLIDERS ASSTD DESIGNS      2880       0.18   518.40\n8            JAZZ HEARTS ADDRESS BOOK        10       0.19     1.90\n1  SET OF 60 VINTAGE LEAF CAKE CASES         24       0.55    13.20\n5                      POPCORN HOLDER         7       0.85     5.95\n4    PLAYING CARDS JUBILEE UNION JACK         2       1.25     2.50"
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# your code here\n",
+    "order.sort_values('UnitPrice',ascending = True).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Description</th>\n      <th>Quantity</th>\n      <th>UnitPrice</th>\n      <th>Revenue</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>6</th>\n      <td>BOX OF VINTAGE ALPHABET BLOCKS</td>\n      <td>1</td>\n      <td>11.95</td>\n      <td>11.95</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>PARTY BUNTING</td>\n      <td>4</td>\n      <td>4.95</td>\n      <td>19.80</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>LUNCH BAG APPLE DESIGN</td>\n      <td>1</td>\n      <td>1.65</td>\n      <td>1.65</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>RIBBON REEL STRIPES DESIGN</td>\n      <td>1</td>\n      <td>1.65</td>\n      <td>1.65</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>PLAYING CARDS JUBILEE UNION JACK</td>\n      <td>2</td>\n      <td>1.25</td>\n      <td>2.50</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "                        Description  Quantity  UnitPrice  Revenue\n6    BOX OF VINTAGE ALPHABET BLOCKS         1      11.95    11.95\n7                     PARTY BUNTING         4       4.95    19.80\n0            LUNCH BAG APPLE DESIGN         1       1.65     1.65\n2       RIBBON REEL STRIPES DESIGN          1       1.65     1.65\n4  PLAYING CARDS JUBILEE UNION JACK         2       1.25     2.50"
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "order.sort_values('UnitPrice', ascending= False).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
