--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -18,11 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,11 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "pd_series = pd.Series(lst)"
    ]
   },
   {
@@ -61,11 +64,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "5.7\n"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "print(pd_series[0])"
    ]
   },
   {
@@ -77,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,11 +105,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "0     1     2     3     4\n0  53.1  95.0  67.5  35.0  78.4\n1  61.3  40.8  30.8  37.8  87.6\n2  20.6  73.2  44.2  14.6  91.8\n3  57.4   0.1  96.1   4.2  69.5\n4  83.6  20.5  85.4  22.8  35.9\n5  49.0  69.0   0.1  31.8  89.1\n6  23.3  40.7  95.0  83.8  26.9\n7  27.6  26.4  53.8  88.8  68.5\n8  96.6  96.4  53.4  72.4  50.1\n9  73.7  39.0  43.2  81.6  34.7\n"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "df = pd.DataFrame(b)\n",
+    "print(df)"
    ]
   },
   {
@@ -111,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,11 +138,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Score_1  Score_2  Score_3  Score_4  Score_5\n0     53.1     95.0     67.5     35.0     78.4\n1     61.3     40.8     30.8     37.8     87.6\n2     20.6     73.2     44.2     14.6     91.8\n3     57.4      0.1     96.1      4.2     69.5\n4     83.6     20.5     85.4     22.8     35.9\n5     49.0     69.0      0.1     31.8     89.1\n6     23.3     40.7     95.0     83.8     26.9\n7     27.6     26.4     53.8     88.8     68.5\n8     96.6     96.4     53.4     72.4     50.1\n9     73.7     39.0     43.2     81.6     34.7\n"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "new_names = {0 : colnames[0], 1 : colnames[1], 2 : colnames[2], 3 : colnames[3], 4 : colnames[4]}\n",
+    "df.rename(columns = new_names, inplace = True)\n",
+    "print(df)"
    ]
   },
   {
@@ -136,11 +163,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Score_1  Score_3  Score_5\n0     53.1     67.5     78.4\n1     61.3     30.8     87.6\n2     20.6     44.2     91.8\n3     57.4     96.1     69.5\n4     83.6     85.4     35.9\n5     49.0      0.1     89.1\n6     23.3     95.0     26.9\n7     27.6     53.8     68.5\n8     96.6     53.4     50.1\n9     73.7     43.2     34.7\n"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "sub_df = df.loc[:,['Score_1', 'Score_3', 'Score_5']]\n",
+    "print(sub_df)"
    ]
   },
   {
@@ -152,11 +187,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "56.95000000000001\n"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "print(df['Score_3'].mean())"
    ]
   },
   {
@@ -168,11 +210,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "88.8\n"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "print(df['Score_4'].max())"
    ]
   },
   {
@@ -184,11 +233,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "40.75\n"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "print(df['Score_2'].median())"
    ]
   },
   {
@@ -200,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,11 +277,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Description  Quantity  UnitPrice  Revenue\n0              LUNCH BAG APPLE DESIGN         1       1.65     1.65\n1  SET OF 60 VINTAGE LEAF CAKE CASES         24       0.55    13.20\n2         RIBBON REEL STRIPES DESIGN          1       1.65     1.65\n3   WORLD WAR 2 GLIDERS ASSTD DESIGNS      2880       0.18   518.40\n4    PLAYING CARDS JUBILEE UNION JACK         2       1.25     2.50\n5                      POPCORN HOLDER         7       0.85     5.95\n6      BOX OF VINTAGE ALPHABET BLOCKS         1      11.95    11.95\n7                       PARTY BUNTING         4       4.95    19.80\n8            JAZZ HEARTS ADDRESS BOOK        10       0.19     1.90\n9       SET OF 4 SANTA PLACE SETTINGS        48       1.25    60.00\n"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "prods = pd.DataFrame(orders)\n",
+    "print(prods)"
    ]
   },
   {
@@ -237,11 +301,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Quantity    2978.0\nRevenue      637.0\ndtype: float64\n"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "print(prods[['Quantity', 'Revenue']].sum())"
    ]
   },
   {
@@ -253,19 +324,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "11.77\n"
+    }
+   ],
+   "source": [
+    "# your code here\n",
+    "min_price = prods['UnitPrice'].min()\n",
+    "max_price = prods['UnitPrice'].max()\n",
+    "print(max_price - min_price)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.6 64-bit",
    "language": "python",
-   "name": "python3"
+   "name": "python37664bite61034f5ef0c466e91726dec7b83c0f7"
   },
   "language_info": {
    "codemirror_mode": {
@@ -277,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
